# excelshifts

./: .gitignore  README.md  enero2025.py  excel.py  junio2025.py  mayo2025.py  pyproject.toml  solver.py  state.py
policies/: default.yaml
scripts/: diciembre2025.py  diciembre2025_alt.py  enero2025.py  junio2025.py  mayo2025.py  noviembre2025.py  octubre2025.py  validate_noviembre2025.py
src/excelshifts/: excel_io.py  pipeline.py  policy.py  rules.py  solver.py  state.py
src/excelshifts/io/: excel.py  policy.py
src/excelshifts/model/: build.py  constraints.py  objective.py  variables.py
src/excelshifts/rules/: base.py  library.py  registry.py
src/excelshifts/web/: api.py
static/: app.js  index.html  style.css
